# stm-practice

./: Cargo.toml  README.md  memory.x
p1/: Cargo.toml
p1/.cargo/: config.toml
src/: main.rs
